Implement chromebook update with Location

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,3 +53,10 @@
   margin: auto;
 }
 
+.centered {
+  display: 'flex';
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
