--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,7 +66,10 @@ table {
   width: 100%;
 }
 
-td, .h {
+th {
+  white-space: nowrap;
+}
+td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
